added event model

--- a/evenementen/app/views/homepage/index.html.erb
+++ b/evenementen/app/views/homepage/index.html.erb
@@ -3,3 +3,4 @@
 <p>Deze webpagina is obviously geschreven door een mongool. Ik beken. I AM GUILTY OF MONGOLISM.  </p>
 <p><em>POWER TO THE POTATO!</em></p>
 <img src="http://i3.kym-cdn.com/photos/images/facebook/000/128/749/I-can-count-to-potato.jpg" />
+<p> For some more serious business, go to <%= link_to 'events', events_path %></p>
