--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -1,1 +1,20 @@
+<h1> Event <%= @event.id %></h1>
+<p>
+  <strong>Title:</strong>
+  <%= @event.title %>
+</p>
+ 
+<p>
+  <strong>Text:</strong>
+  <%= @event.text %>
+</p>
 
+<p>
+  <strong>Startdate:</strong>
+  <%= @event.begin %>
+</p>
+ 
+<p>
+  <strong>Enddate:</strong>
+  <%= @event.einde %>
+</p>
