added link(s) to save zelda(s)

--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -18,3 +18,5 @@
   <strong>Enddate:</strong>
   <%= @event.einde %>
 </p>
+
+<p> <%= link_to 'Home', :root %> |  <%= link_to 'Back', events_path %></p>
