--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Behold all the events this page has!</h1>
 
+<p> <%= link_to 'New event', new_event_path %></p>
+
 <% if @events.size !=0 %>
 <table>
 	<tr>
@@ -7,6 +9,7 @@
 		<th>Text</th>
 		<th>Startdate</th>
 		<th>Enddate</th>
+		<th colspan="2"></th>
 	</tr>
 
 	<% @events.each do |event| %>
@@ -15,6 +18,9 @@
 		<td><%= event.text %></td>
 		<td><%= event.begin %></td>
 		<td><%= event.einde %></td>
+		<td> <%= link_to 'Edit', edit_event_path(event) %> </td>
+		<td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
+		
 	</tr>
 	<% end %>
 
