--- a/evenementen/app/views/events/new.html.erb
+++ b/evenementen/app/views/events/new.html.erb
@@ -1,25 +1,5 @@
-<%= form_for @event do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
-  
-    <p>
-    <%= f.label :begin %><br>
-    <%= f.text_area :begin %>
-  </p>
-  
-  <p>
-    <%= f.label :einde %><br>
-    <%= f.text_area :einde %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<h1>New event</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', events_path %>
