--- a/evenementen/app/views/homepage/index.html.erb
+++ b/evenementen/app/views/homepage/index.html.erb
@@ -4,3 +4,5 @@
 <p><em>POWER TO THE POTATO!</em></p>
 <img src="http://i3.kym-cdn.com/photos/images/facebook/000/128/749/I-can-count-to-potato.jpg" />
 <p> For some more serious business, go to <%= link_to 'events', events_path %></p>
+
+<iframe width="420" height="315" src="https://www.youtube.com/embed/qObzgUfCl28?t=0m51s" frameborder="0" allowfullscreen></iframe>
