modified DB to accept messages + changed date cols

--- a/evenementen/app/views/events/_form.html.erb
+++ b/evenementen/app/views/events/_form.html.erb
@@ -10,13 +10,13 @@
   </p>
   
     <p>
-    <%= f.label :begin %><br>
-    <%= f.text_area :begin %>
+    <%= f.label :startdate %><br>
+    <%= f.text_area :startdate %>
   </p>
   
   <p>
-    <%= f.label :einde %><br>
-    <%= f.text_area :einde %>
+    <%= f.label :enddate %><br>
+    <%= f.text_area :enddate %>
   </p>
  
   <p>
