--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -11,12 +11,12 @@
 
 <p>
   <strong>Startdate:</strong>
-  <%= @event.begin %>
+  <%= @event.startdate %>
 </p>
  
 <p>
   <strong>Enddate:</strong>
-  <%= @event.einde %>
+  <%= @event.enddate %>
 </p>
 
 <p> <%= link_to 'Home', :root %> |  <%= link_to 'Back', events_path %></p>
