--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -16,8 +16,8 @@
 	<tr>
 		<td><%= event.title %></td>
 		<td><%= event.text %></td>
-		<td><%= event.begin %></td>
-		<td><%= event.einde %></td>
+		<td><%= event.startdate %></td>
+		<td><%= event.enddate %></td>
 		<td> <%= link_to 'Edit', edit_event_path(event) %> </td>
 		<td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
 		
