--- a/evenementen/app/views/people/_form.html.erb
+++ b/evenementen/app/views/people/_form.html.erb
@@ -22,7 +22,7 @@
 
   <p>
     <%= f.label :birthdate %><br>
-    <%= f.text_field :birthdate %>
+    <%= f.date_select :birthdate %>
   </p>
 
   <p>
