--- a/evenementen/app/views/people/edit.html.erb
+++ b/evenementen/app/views/people/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Edit person</h1>
 
-<%= render 'form' %>
+<p>
+  <%= link_to 'Home', :root %> |  <%= link_to 'Back', people_path %>
+</p>
 
-<%= link_to 'Back', people_path %>
+<%= render 'form' %>
