--- a/evenementen/app/views/events/_form.html.erb
+++ b/evenementen/app/views/events/_form.html.erb
@@ -11,12 +11,12 @@
   
     <p>
     <%= f.label :startdate %><br>
-    <%= f.text_area :startdate %>
+    <%= f.date_select :startdate %>
   </p>
   
   <p>
     <%= f.label :enddate %><br>
-    <%= f.text_area :enddate %>
+    <%= f.date_select :enddate %>
   </p>
  
   <p>
