--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -1,33 +1,35 @@
-<h1> Behold all the events this page has!</h1>
+<h1>Behold all the events this page has!</h1>
 
-<p> <%= link_to 'New event', new_event_path %></p>
+<p>
+  <%= link_to 'New event', new_event_path(@event)%> | <%= link_to 'Manage people', people_path %>
+</p>
+
 
 <% if @events.size !=0 %>
 <table>
-	<tr>
-		<th>Title</th>
-		<th>Text</th>
-		<th>Startdate</th>
-		<th>Enddate</th>
-		<th colspan="2"></th>
-	</tr>
+  <tr>
+    <th>Title</th>
+    <th>Text</th>
+    <th>Startdate</th>
+    <th>Enddate</th>
+    <th colspan="2"></th>
+  </tr>
 
-	<% @events.each do |event| %>
-	<tr>
-		<td><%= event.title %></td>
-		<td><%= event.text %></td>
-		<td><%= event.startdate %></td>
-		<td><%= event.enddate %></td>
-		<td> <%= link_to 'Edit', edit_event_path(event) %> </td>
-		<td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
-		
-	</tr>
-	<% end %>
+  <% @events.each do |event| %>
+  <tr>
+    <td><%= link_to event.title, event_path(event) %></td>
+    <td><%= event.text %></td>
+    <td><%= event.begin %></td>
+    <td><%= event.einde %></td>
+    <td> <%= link_to 'Edit', edit_event_path(event) %> </td>
+    <td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
+  </tr>
+  <% end %>
 
 </table>
 
 <% else%>
 <p>
-	I'm sorry, there are no entries at the moment
+  There are no entries at the moment.
 </p>
 <% end %> 
