--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing persons</h1>
 
-<%= link_to 'New person', new_person_path %>
+<p>
+  <%= link_to 'Home', :root %> |  <%= link_to 'Back', events_path %> | <%= link_to 'New person', new_person_path %>
+</p>
 
 <table>
   <tr>
@@ -13,11 +15,11 @@
 
 <% @persons.each do |person| %>
   <tr>
-    <td><%= person.name %></td>
+    <td><%= link_to person.name, person_path(person) %></td>
     <td><%= person.email %></td>
     <td><%= person.birthdate %></td>
     <td><%= link_to 'Edit', edit_person_path(person) %></td>
-    <td><%= link_to 'Destroy', person_path(person),
+    <td><%= link_to 'Delete', person_path(person),
                     method: :delete,
                     data: { confirm: 'Are you sure?' } %></td>
   </tr>
