Fixed date_select ranges

--- a/evenementen/app/views/people/_form.html.erb
+++ b/evenementen/app/views/people/_form.html.erb
@@ -22,7 +22,7 @@
 
   <p>
     <%= f.label :birthdate %><br>
-    <%= f.date_select :birthdate %>
+    <%= f.date_select :birthdate, start_year: 1900, end_year: 2015 %>
   </p>
 
   <p>
