--- a/evenementen/app/views/messages/_form.html.erb
+++ b/evenementen/app/views/messages/_form.html.erb
@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :date %><br />
-    <%= f.date_select :date %>
+    <%= f.date_select :date, start_year: 1900, end_year: 2015 %>
   </p>
   <p>
     <%= f.submit %>
