cleaned up homepage + added mongol easter egg page

--- a/evenementen/app/views/homepage/index.html.erb
+++ b/evenementen/app/views/homepage/index.html.erb
@@ -1,8 +1,4 @@
-<h1>Homepage from the most awesome Ruby on Rails app EVER (bitches!)</h1>
-<br />
-<p>Deze webpagina is obviously geschreven door een mongool. Ik beken. I AM GUILTY OF MONGOLISM.  </p>
-<p><em>POWER TO THE POTATO!</em></p>
-<img src="http://i3.kym-cdn.com/photos/images/facebook/000/128/749/I-can-count-to-potato.jpg" />
-<p> For some more serious business, go to <%= link_to 'events', events_path %></p>
+<h1>Event management in Ruby on Rails</h1>
+<p>Welcome to the website that solves all your event management needs, brought to you by Jasper&Florre NV.</p>
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/qObzgUfCl28?t=0m51s" frameborder="0" allowfullscreen></iframe>
+<p> For some more serious business, go to <%= link_to 'events', events_path %></p>
