--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -19,8 +19,8 @@
   <tr>
     <td><%= link_to event.title, event_path(event) %></td>
     <td><%= event.text %></td>
-    <td><%= event.begin %></td>
-    <td><%= event.einde %></td>
+    <td><%= event.startdate %></td>
+    <td><%= event.enddate %></td>
     <td> <%= link_to 'Edit', edit_event_path(event) %> </td>
     <td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
   </tr>
