Changed datetime where appropriate; added 404 page; fixed bugs

--- a/evenementen/app/views/events/_form.html.erb
+++ b/evenementen/app/views/events/_form.html.erb
@@ -11,12 +11,12 @@
   
     <p>
     <%= f.label :startdate %><br>
-    <%= f.date_select :startdate, start_year: 2015, end_year: 2065 %>
+    <%= f.datetime_select :startdate, start_year: 2015, end_year: 2065 %>
   </p>
   
   <p>
     <%= f.label :enddate %><br>
-    <%= f.date_select :enddate, start_year: 2015, end_year: 2065 %>
+    <%= f.datetime_select :enddate, start_year: 2015, end_year: 2065 %>
   </p>
  
   <p>
