--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -28,21 +28,7 @@
 
 <h2>Messages</h2>
 
-<% @event.messages.each do |message| %>
-<p>
-  <strong><%= message.person.name %></strong> said the following on <strong><%= message.date %></strong>:
-  <p>
-    <em><%= message.text %></em>
-  </p>
-  <p>
-    <%= link_to 'Edit', edit_message_path(message) %> |
-    <%= link_to 'Delete', message_path(message),
-                  method: :delete,
-                  data: { confirm: 'Are you sure?' } %>
-  </p>
-  <hr>
-</p>
-<% end %>
+<%= render 'messages/message' %>
 
 <p>
   <%= render 'messages/embedded_form' %>
