--- a/evenementen/app/views/homepage/index.html.erb
+++ b/evenementen/app/views/homepage/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Event management in Ruby on Rails</h1>
-<p>Welcome to the website that solves all your event management needs, brought to you by Jasper&amp;Florre NV.</p>
 
-<p> For some more serious business, go to <%= link_to 'events', events_path %></p>
+<p>
+  <%= link_to 'Events', events_path %> | <%= link_to 'People', people_path %>
+</p>
+
+<p>Welcome to the website that solves all your event management needs, brought to you by Jasper&amp;Florre NV.</p>
