--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing persons</h1>
 
 <p>
-  <%= link_to 'Home', :root %> | <%= link_to 'New person', new_person_path %>
+  <%= link_to 'Home', :root %> | <%= link_to 'Events', events_path %> | <%= link_to 'New person', new_person_path %>
 </p>
 
 <% if @people.size != 0 %>
