--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Behold all the events this page has!</h1>
 
 <p>
-  <%= link_to 'Home', :root %> | <%= link_to 'New event', new_event_path(@event)%>
+  <%= link_to 'Home', :root %> | <%= link_to 'People', people_path %> | <%= link_to 'New event', new_event_path(@event)%>
 </p>
 
 
