--- a/evenementen/app/views/messages/_message.html.erb
+++ b/evenementen/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <% if @people.size != 0 %>
   <% @event.messages.each do |message| %>
   <p>
-    <strong><%= message.person.name %></strong> said the following on <strong><%= message.date %></strong>:
+    <strong><%= link_to message.person.name, person_path(Person.where(name: message.person.name).first.id) %></strong> said the following on <strong><%= message.date %></strong>:
     <p>
       <em><%= message.text %></em>
     </p>
