Added post overview to person page

--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing persons</h1>
+<h1>Manage people</h1>
 
 <p>
   <%= link_to 'Home', :root %> | <%= link_to 'Events', events_path %> | <%= link_to 'New person', new_person_path %>
