Restored link to new user page

--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -39,6 +39,6 @@
   </p>
 <% else %>
   <p>
-    <em>Create a user to enable messages</em>
+    <em><%= link_to 'Create a user', new_person_path %> to enable messages</em>
   </p>
 <% end %>
