--- a/evenementen/app/views/events/_form.html.erb
+++ b/evenementen/app/views/events/_form.html.erb
@@ -1,25 +1,23 @@
 <%= form_for @event do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
-  
-    <p>
+  <div class="form-group">
+    <%= f.text_field :title, :class => "form-control", :placeholder => :title, :required => "true" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.text_area :text, :class => "form-control", :placeholder => :text, :required => "true" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :startdate %><br>
     <%= f.datetime_select :startdate, start_year: 2015, end_year: 2065 %>
-  </p>
-  
-  <p>
+  </div>
+
+  <div class="form-group">
     <%= f.label :enddate %><br>
     <%= f.datetime_select :enddate, start_year: 2015, end_year: 2065 %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit 'Create event', :class => "btn btn-success" %>
+  </div>
 <% end %>
