--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -1,18 +1,18 @@
 <h1>Behold all the events this page has!</h1>
 
-<p>
-  <%= link_to 'Home', :root %> | <%= link_to 'People', people_path %> | <%= link_to 'New event', new_event_path(@event)%>
-</p>
-
+<ol class="breadcrumb">
+  <li><%= link_to 'Home', :root %></li>
+  <li class="active">Events</li>
+</ol>
 
 <% if @events.size != 0 %>
-<table>
+<table class="table" width="100%">
   <tr>
     <th>Title</th>
     <th>Description</th>
     <th>Startdate</th>
     <th>Enddate</th>
-    <th colspan="2">Actions</th>
+    <th>Actions</th>
   </tr>
 
   <% @events.each do |event| %>
@@ -21,15 +21,16 @@
     <td><%= event.text %></td>
     <td><%= event.startdate.strftime("%d %b %Y %H:%M") %></td>
     <td><%= event.enddate.strftime("%d %b %Y %H:%M") %></td>
-    <td> <%= link_to 'Edit', edit_event_path(event) %> </td>
-    <td> <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %> </td>
+    <td>
+      <%= link_to 'Edit', edit_event_path(event), :class => "btn btn-default" %>
+      <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
+    </td>
   </tr>
   <% end %>
-
 </table>
 
 <% else%>
-<p>
-  There are no entries at the moment.
-</p>
-<% end %> 
+  <div class="alert alert-warning" role="alert">There are no events at the moment.</div>
+<% end %>
+
+<%= link_to 'New event', new_event_path, :class => "btn btn-success" %>
