--- a/evenementen/app/views/messages/_form.html.erb
+++ b/evenementen/app/views/messages/_form.html.erb
@@ -1,19 +1,18 @@
-  <p>
-    <%= f.label :person %><br />
-    <%= f.select(:person_id) do %>
-      <% @people.each do |p| -%>
-        <%= content_tag(:option, p.name, value: p.id) %>
-      <% end %>
+<div class="form-group">
+  <%= f.label :person %><br />
+  <%= f.select(:person_id) do %>
+    <% @people.each do |p| -%>
+      <%= content_tag(:option, p.name, value: p.id) %>
     <% end %>
-  </p>
-  <p>
-    <%= f.label :text %><br />
-    <%= f.text_area :text %>
-  </p>
-  <p>
-    <%= f.label :date %><br />
-    <%= f.datetime_select :date, start_year: 1900, end_year: 2015 %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+  <% end %>
+</div>
+<div class="form-group">
+  <%= f.text_area :text, :require => "true", :class => "form-control", :placeholder => :text %>
+</div>
+<div class="form-group">
+  <%= f.label :date %><br />
+  <%= f.datetime_select :date, start_year: 1900, end_year: 2015 %>
+</div>
+<div class="form-group">
+  <%= f.submit 'Save', :class => "btn btn-success" %>
+</div>
