--- a/evenementen/app/views/people/_form.html.erb
+++ b/evenementen/app/views/people/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_for @person do |f| %>
   <% if @person.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@person.errors.count, "error") %> prohibited
-      this person from being saved:</h2>
+  <div id="error_explanation" class="alert alert-danger">
+    <strong><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</strong>
     <ul>
     <% @person.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -10,22 +9,24 @@
     </ul>
   </div>
   <% end %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
 
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
+  <div class="form-group">
+    <%= f.text_field :name, :class => "form-control", :placeholder => :name, :required => "true" %>
+  </div>
 
-  <p>
+  <div class="form-group">
+    <div class="input-group">
+      <div class="input-group-addon">@</div>
+      <%= f.email_field :email, :class => "form-control", :placeholder => :email, :required => "true" %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :birthdate %><br>
     <%= f.date_select :birthdate, start_year: 1900, end_year: 2015 %>
-  </p>
+  </div>
 
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="form-group">
+    <%= f.submit 'Save', :class => "btn btn-success" %>
+  </div>
 <% end %>
