--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -1,16 +1,17 @@
 <h1>Manage people</h1>
 
-<p>
-  <%= link_to 'Home', :root %> | <%= link_to 'Events', events_path %> | <%= link_to 'New person', new_person_path %>
-</p>
+<ol class="breadcrumb">
+  <li><%= link_to 'Home', :root %></li>
+  <li class="active">People</li>
+</ol>
 
 <% if @people.size != 0 %>
-  <table>
+  <table class="table">
     <tr>
       <th>Name</th>
       <th>Email</th>
       <th>Date of birth</th>
-      <th colspan="2">Actions</th>
+      <th>Actions</th>
     </tr>
 
   <% @people.each do |person| %>
@@ -18,15 +19,17 @@
       <td><%= link_to person.name, person_path(person) %></td>
       <td><%= person.email %></td>
       <td><%= person.birthdate.strftime("%d %B %Y") %></td>
-      <td><%= link_to 'Edit', edit_person_path(person) %></td>
-      <td><%= link_to 'Delete', person_path(person),
+      <td>
+        <%= link_to 'Edit', edit_person_path(person), :class => "btn btn-default" %>
+        <%= link_to 'Delete', person_path(person),
                       method: :delete,
-                      data: { confirm: 'Are you sure?' } %></td>
+                      data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
+      </td>
     </tr>
   <% end %>
   </table>
 <% else %>
-  <p>
-    There are no entries at the moment.
-  </p>
+  <div class="alert alert-warning">There are no entries at the moment.</div>
 <% end %>
+
+<%= link_to 'Create person', new_person_path, :class => "btn btn-success" %>
