modified homepage + people attending events placeholder

--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -1,46 +1,86 @@
 <h1><%= @event.title %></h1>
 
 <ol class="breadcrumb">
-  <li><%= link_to 'Home', :root %></li>
-  <li><%= link_to 'Events', events_path %></li>
-  <li class="active"><%= @event.title %></li>
+	<li>
+		<%= link_to 'Home', :root %>
+	</li>
+	<li>
+		<%= link_to 'Events', events_path %>
+	</li>
+	<li class="active">
+		<%= @event.title %>
+	</li>
 </ol>
 
 <p>
-  <strong>Title:</strong>
-  <%= @event.title %>
+	<strong>Title:</strong>
+	<%= @event.title %>
 </p>
 
 <p>
-  <strong>Text:</strong>
-  <%= @event.text %>
+	<strong>Text:</strong>
+	<%= @event.text %>
 </p>
 
 <p>
-  <strong>Startdate:</strong>
-  <%= @event.startdate.strftime("%d %B %Y %H:%M") %>
+	<strong>Startdate:</strong>
+	<%= @event.startdate.strftime("%d %B %Y %H:%M") %>
 </p>
- 
+
 <p>
-  <strong>Enddate:</strong>
-  <%= @event.enddate.strftime("%d %B %Y %H:%M") %>
+	<strong>Enddate:</strong>
+	<%= @event.enddate.strftime("%d %B %Y %H:%M") %>
 </p>
 
 <hr>
 
+<!-- Note: 'people attending' is now based on the number of people in the DB, not the ones actually attending the event. This is a placeholder until proper relationships between
+	people and events are established. TODO
+	-->
+<h2>People attending</h2> 
+
+<% if @people.size != 0 %>
+<p>
+	<%= pluralize(@people.size, "person") %> attending this event.
+</p>
+<% else%>
+<p>
+	No people are attending this event
+</p>
+<% end%>
+
+<div class="form-group">
+<%= form_for(@event) do |f| %>
+	<%= f.label :person %>
+	<br />
+	<%= f.select(:person_id) do %>
+		<% @people.each do |p| -%>
+			<%= content_tag(:option, p.name, value: p.id) %>
+		<% end %>
+	<% end %>
+</div>
+
+
+<div class="form-group">
+	<%= f.submit 'Save', :class => "btn btn-success" %>
+	<% end %>
+</div>
+
+
+<hr>
 <h2>Messages</h2>
 
 <% if @people.size != 0 %>
-  <%= render 'messages/messages' %>
+<%= render 'messages/messages' %>
 
-  <p>
-    <strong>Post a new message</strong>
-    <%= form_for([@event, @event.messages.build]) do |f| %>
-      <%= render :partial => 'messages/form', :locals => {:f => f} %>
-    <% end %>
-  </p>
+<p>
+	<strong>Post a new message</strong>
+	<%= form_for([@event, @event.messages.build]) do |f| %>
+	<%= render :partial => 'messages/form', :locals => {:f => f} %>
+	<% end %>
+</p>
 <% else %>
-  <p>
-    <em><%= link_to 'Create a user', new_person_path %> to enable messages</em>
-  </p>
+<p>
+	<em><%= link_to 'Create a user', new_person_path %> to enable messages</em>
+</p>
 <% end %>
