--- a/evenementen/app/views/messages/edit.html.erb
+++ b/evenementen/app/views/messages/edit.html.erb
@@ -7,6 +7,17 @@
   <li class="active">Message</li>
 </ol>
 
-<%= form_for @message do |f| %>
+<% if @message.errors.any? %>
+<div id="error_explanation" class="alert alert-danger">
+  <strong><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</strong>
+  <ul>
+  <% @message.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+</div>
+<% end %>
+
+<%= form_for @message, url: event_message_path(@event, @message) do |f| %>
   <%= render :partial => 'messages/form', :locals => {:f => f} %>
 <% end %>
