--- a/evenementen/app/views/people/index.html.erb
+++ b/evenementen/app/views/people/index.html.erb
@@ -5,7 +5,7 @@
   <li class="active">People</li>
 </ol>
 
-<% if People.all.any? %>
+<% if Person.all.any? %>
   <table class="table">
     <tr>
       <th>Name</th>
@@ -14,7 +14,7 @@
       <th>Actions</th>
     </tr>
 
-  <% People.all.each do |person| %>
+  <% Person.all.each do |person| %>
     <tr>
       <td><%= link_to person.name, person_path(person) %></td>
       <td><%= person.email %></td>
