--- a/evenementen/app/views/layouts/application.html.erb
+++ b/evenementen/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><%= nav_link("Home", root_path) %></li>
           <li><%= nav_link("Events", events_path) %></li>
           <li><%= nav_link("People", people_path) %></li>
         </ul>
