--- a/evenementen/app/views/events/_form.html.erb
+++ b/evenementen/app/views/events/_form.html.erb
@@ -3,9 +3,11 @@
     <%= f.text_field :title, :class => "form-control", :placeholder => :title, :required => "true" %>
   </div>
 
-  <div class="form-group">
-    <%= f.text_area :text, :class => "form-control", :placeholder => :text, :required => "true" %>
-  </div>
+  <%= f.text_area :text,
+      :class => "form-control",
+      :placeholder => :text,
+      :required => true,
+      :rows => "10" %>
 
   <div class="form-group">
     <%= f.label :startdate %><br>
