--- a/evenementen/app/views/events/index.html.erb
+++ b/evenementen/app/views/events/index.html.erb
@@ -1,36 +1,10 @@
-<h1>Behold all the events this page has!</h1>
+<h1>Manage Events</h1>
 
 <ol class="breadcrumb">
   <li><%= link_to 'Home', :root %></li>
   <li class="active">Events</li>
 </ol>
 
-<% if Event.all.any? %>
-<table class="table" width="100%">
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Startdate</th>
-    <th>Enddate</th>
-    <th>Actions</th>
-  </tr>
-
-  <% Event.all.each do |event| %>
-  <tr>
-    <td><%= link_to event.title, event_path(event) %></td>
-    <td><%= event.text %></td>
-    <td><%= event.startdate.strftime("%d %b %Y %H:%M") %></td>
-    <td><%= event.enddate.strftime("%d %b %Y %H:%M") %></td>
-    <td>
-      <%= link_to 'Edit', edit_event_path(event), :class => "btn btn-default" %>
-      <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
-    </td>
-  </tr>
-  <% end %>
-</table>
-
-<% else%>
-  <div class="alert alert-warning" role="alert">There are no events at the moment.</div>
-<% end %>
+<%= render 'events' %>
 
 <%= link_to 'New event', new_event_path, :class => "btn btn-success" %>
