--- a/evenementen/app/views/events/show.html.erb
+++ b/evenementen/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
 
         <p>
           <strong>Text:</strong>
-          <%= @event.text %>
+          <%= simple_format(@event.text, {}, wrapper_tag: "div") %>
         </p>
 
         <p>
@@ -78,7 +78,7 @@
               <% @event.people.each do |p| %>
               <tr>
                 <td class="td-fill">
-                  <%= p.name %>
+                  <%= link_to p.name, person_path(p) %>
                 </td>
                 <td>
                   <%= link_to 'Delete', event_person_path(@event, :id => p.id), method: :delete, :class => "btn btn-xs btn-danger" %>
@@ -94,6 +94,10 @@
     </div>
   </div>
 </div>
+
+<p>
+  <%= link_to 'Edit', edit_event_path(@event), :class => "btn btn-default" %>
+  <%= link_to 'Delete', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %></p>
 
 <hr />
 <h2>Messages</h2>
