--- a/evenementen/app/views/people/show.html.erb
+++ b/evenementen/app/views/people/show.html.erb
@@ -21,13 +21,36 @@
   <%= @person.birthdate.strftime("%d %B %Y") %>
 </p>
 
+<p>
+  <%= link_to 'Edit', edit_person_path(@person), :class => "btn btn-default" %>
+  <%= link_to 'Delete', person_path(@person),
+              method: :delete,
+              data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
+</p>
+
 <% if @person.messages.any? %>
 <hr />
+
+<h4>Message activity</h4>
 
 <ul class="list-group">
   <% @person.messages.each do |m| %>
     <li class="list-group-item">
       <strong><%= @person.name %></strong> posted a message on event <strong><%= link_to m.event.title, event_path(m.event) %></strong> on <%= m.date.strftime("%d %B %Y") %>
+    </li>
+  <% end %>
+</ul>
+<% end %>
+
+<% if @person.events.any? %>
+<hr />
+
+<h4>Attending</h4>
+
+<ul class="list-group">
+  <% @person.events.each do |event| %>
+    <li class="list-group-item">
+      <strong><%= @person.name %></strong> is attending <strong><%= link_to event.title, event_path(event) %></strong> in <%= event.startdate.strftime("%B %Y") %>
     </li>
   <% end %>
 </ul>
